# bpmn-text-verifier

./: .gitignore  main.py  pyproject.toml
.claude/: settings.local.json
scripts/: baseline_pure_llm.py  evaluate.py  mutate.py  run_paper_evaluation.py  run_pipeline.py
src/: __init__.py  config.py  models.py  orchestrator.py  rate_limiter.py
src/module_a/: __init__.py  bpmn_parser.py  text_loader.py
src/module_b/: __init__.py  formalizer_agent.py  mapper_agent.py
src/module_c/: __init__.py  verifier.py
src/module_d/: __init__.py  explainer_agent.py
tests/: test_bpmn_parser.py  test_explainer.py  test_formalizer.py  test_mapper.py  test_orchestrator.py  test_text_loader.py  test_verifier.py
